<resources>
    <string name="app_name">HUELLITAS</string>
    <string name="nombreMascota">Ingrese nombre de mascota</string>
    <string name="edadMascota">Ingrese edad de la mascota</string>
    <string name="generoMascota">Ingrese género de mascota</string>
    <string name="tipoMascota">Ingrese tipo de mascota</string>
    <string name="crearMascota">Agregar Mascota</string>
    <string name="descripcionMascota">Ingrese descripción de la mascota</string>
    <string name="title_activity_listar_mascotas">ListarMascotas</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="bienvenido">Bienvenido</string>
    <string name="login">Iniciar</string>
    <string name="registrarse">Registrarse</string>
    <string name="email">Email@gmail.con</string>
    <string name="clave">Contraseña</string>

    <string name="confirmar_contrase_a">Confirmar contraseña:</string>
    <string name="telefono_1">Telefono 1:</string>
    <string name="telefono_2">Telefono 2:</string>
    <string name="direcci_n">Dirección:</string>
    <string name="nombre">Nombre:</string>
    <string name="correo_el_ctronico">Correo Eléctronico:</string>
    <string name="name">Name</string>
    <string name="imagen">Imagen:</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="apellido">Apellido:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="test">TEST</string>
    <string name="title_activity_main_app">MainApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_AltaMascota">Nueva mascota</string>
    <string name="menu_VerMascota">Mis mascotas</string>
    <string name="menu_CerrarSession">Cerrar Session</string>

    <string name="home_second">Home Second</string>
    <string name="alta_mascota">Alta Mascota</string>

</resources>
