<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.huellitas.vistas.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
        <action
            android:id="@+id/action_nav_home_to_nav_AltaMascota"
            app:destination="@id/nav_AltaMascota" />
        <action
            android:id="@+id/action_nav_home_to_nav_VerMascota"
            app:destination="@id/nav_VerMascota" />
        <action
            android:id="@+id/action_nav_home_to_nav_CerrarSession"
            app:destination="@id/nav_CerrarSession" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.huellitas.vistas.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_AltaMascota"
        android:name="com.example.huellitas.vistas.ui.AltaMascota.AltaMascota"
        android:label="@string/menu_AltaMascota"
        tools:layout="@layout/alta_mascota_fragment" >
        <action
            android:id="@+id/action_nav_AltaMascota_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_VerMascota"
        android:name="com.example.huellitas.vistas.ui.MisMascotas.MisMascotas"
        android:label="@string/menu_VerMascota"
        tools:layout="@layout/mis_mascotas_fragment" >
        <action
            android:id="@+id/action_nav_VerMascota_to_nav_home2"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_CerrarSession"
        android:name="com.example.huellitas.vistas.ui.CerraSession.CerrarSession"
        android:label="@string/menu_CerrarSession"
        tools:layout="@layout/cerrar_session_fragment" >
        <action
            android:id="@+id/action_nav_CerrarSession_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>