<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.CrearMascota">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nombre"
            android:hint="@string/nombreMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text"
            />

        <EditText
            android:id="@+id/edad"
            android:layout_below="@+id/nombre"
            android:hint="@string/edadMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

        <Spinner
            android:id="@+id/genero"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/edad"
            android:entries="@array/generoMascota" />

        <Spinner
            android:id="@+id/tipomascota"
            android:layout_below="@id/genero"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:entries="@array/tipoMascota" />

        <EditText
            android:id="@+id/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="4"
            android:minLines="4"
            android:maxLines="10"
            android:layout_below="@id/tipomascota"
            android:hint="@string/descripcionMascota"
            android:inputType="textMultiLine"
             />
        <Button
            android:id="@+id/btnCrearMascota"
            android:text="@string/crearMascota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>