<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".vistas.CrearMascota">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/nombreMascota"
            android:inputType="text" />

        <EditText
            android:id="@+id/edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nombre"
            android:hint="@string/edadMascota"
            android:inputType="number" />

        <Spinner
            android:id="@+id/genero"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/edad"
            android:entries="@array/generoMascota" />

        <Spinner
            android:id="@+id/tipomascota"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/genero"
            android:entries="@array/tipoMascota" />

        <Spinner
            android:id="@+id/razaMascota"
            android:layout_below="@id/tipomascota"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            />

        <EditText
            android:id="@+id/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/razaMascota"
            android:hint="@string/descripcionMascota"
            android:inputType="textMultiLine"
            android:lines="4"
            android:maxLines="10"
            android:minLines="4" />

        <Button
            android:id="@+id/btnCrearMascota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/crearMascota" />

    </RelativeLayout>

</FrameLayout>

